# OM1-system-setup

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: lint.yml  release-ota.yml  release-wifi.yml  release.yml
OTA/: README.md  docker-compose.agent.yml  docker-compose.updater.yml  docker-compose.yml
OTA/agent/: README.md  main.py
OTA/ota/: action_handlers.py  docker_operations.py  ecr_handler.py  ecr_manager.py  file_manager.py  ota.py  progress_reporter.py
OTA/updater/: README.md  main.py
OTA/utils/: ota.py  s3_utils.py  ws_client.py
WIFI/: WIFI.md
WIFI/backend/: app.py  requirements.txt
WIFI/backend/modules/: __init__.py  container_monitor.py  stream_monitor.py  wifi_manager.py
WIFI/frontend/public/: index.html
WIFI/frontend/src/components/: ContainerStatus.jsx  Dashboard.jsx  StatusPanel.jsx  WiFiStatus.jsx
WIFI/scripts/: hotspot-configure.sh  hotspot-monitor.sh  install.sh
WIFI/systemd/: om1-hotspot.service
backend/: app.py
backend/modules/: container_monitor.py
frontend/src/components/: StatusPanel.jsx  WiFiStatus.jsx
